--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,10 @@ body {
 .book h1 {
     margin-top: 0.5rem;
 }
+
+.book{
+    color: red;
+    letter-spacing: 5px;
+    font-size: 0.75rem;
+    margin-top: 0.25rem;
+}
